# hkopendata

./: README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
src/hkopendata/: cli.py  types.py  utils.py
src/hkopendata/geo/: search.py  transform.py
src/hkopendata/hydro/: __init__.py  facilities.py  thematic.py  tide.py  tiles.py  version.py
src/hkopendata/hydro/data/: version.xml
src/hkopendata/transport/: gmb.py  kmb.py
src/hkopendata/weather/: opendata.py  run.py  station.py  wxviewer.py
tests/: conftest.py  test_geo.py  test_gmb.py  test_hydro.py  test_kmb.py  test_weather.py  test_wxviewer.py
