[project]
name = "hkopendata"
version = "0.0.1"
description = "Open geospatial data in Hong Kong"
authors = [{ name = "Abraham Cheung", email = "abraham@ylcheung.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=24.1.0",
    "annotated-types>=0.7.0",
    "httpx[http2,zstd]>=0.28.1",
    "isqx>=0.1",
    "orjson>=3.11.0",
    "polars>=1.31.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
cli = ["appdirs>=1.4.4", "typer>=0.16.0"]
plot = ["matplotlib>=3.9.4", "basemap>=1.3.0", "basemap-data-hires>=2.0.0"]
hydro = ["pydantic>=2.11.7", "pydantic-xml>=2.17.3"]

[project.scripts]
hkopendata = 'hkopendata.cli:app'

[project.urls]
Homepage = "https://github.com/abc8747/hkopendata"
Repository = "https://github.com/abc8747/hkopendata"
Issues = "https://github.com/abc8747/hkopendata/issues"

[dependency-groups]
types = ["types-aiofiles>=24.1.0.20250708"]
lint = ["ruff>=0.12.4"]
typing = ["mypy>=1.17.0"]
test = ["anyio>=4.8.0", "pytest>=9"]

[tool.uv]
default-groups = ["types", "lint", "typing", "test"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "NPY",    # numpy
    "NPY201", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
